[metadata]
name = wedipy
version = attr: wedipy.__version__
description = Web Editor in Python
#long_description = file: README.md, CHANGELOG.rst, LICENSE.rst
long_description = file: README.md
keywords = one, two
license = GNU GPLv3 

[options]
install_requires =
    fastapi
    uvicorn
    jinja2

packages = find:
package_dir =
    =src

include_package_data = True

[options.package_data]
* = *.txt, *.rst, Makefile, static/*, templates/*, static/*/*, static/*/*/*, static/*/*/*/*
hello = *.msg

[options.entry_points]
console_scripts =
    wedipy = wedipy:WedipyEditor.main_cli

[options.packages.find]
where = src
include = w*
#exclude = additional
