[metadata]
name = watchio
version = attr: watchio.__version__
description = Process IO Watcher
long_description = file: README.md
keywords = process io
license = GNU GPLv3 
url = https://koobedoc.github.io/watchio/

[options]
install_requires =
    psutil

packages = find:
package_dir =
    =src

include_package_data = True

[options.package_data]
* = *.txt, *.rst

[options.entry_points]
console_scripts =
    watchio = watchio:WatchIO.main_cli

[options.packages.find]
where = src
include = w*
#exclude = additional
